<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/authorization"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/edit_pass"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_item"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>